Agregado comentarios en div

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-
+    <!-- contenedor uno -->
     <div>
-
+        <!-- contenedor de los puntuajes -->
         <div class="scores">
             <h1 id="score">000</h1>
             <h1 id="highScore">000</h1>
