--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1 id="score">000</h1>
             <h1 id="highScore">000</h1>
         </div>
-
+        <!-- contenedor de los bordes -->
         <div class="game-border-1">
 
             <div class="game-border-2">
