Comentario de los vordes mas verdes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <!-- contenedor de los bordes -->
         <div class="game-border-1">
-
+            <!-- contenedor de los bodes mas verde -->
             <div class="game-border-2">
 
                 <div class="game-border-3">
